...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Törlés"
...
            "state" : "translated",
            "value" : "Mértékegység"
          }
        }
      }
    },
    "storageLocations.add" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lagerort hinzufügen"
...
